--- a/.github/workflows/zenodo.yml
+++ b/.github/workflows/zenodo.yml
@@ -12,42 +12,17 @@ jobs:
     - uses: actions/checkout@v3
     - name: download archive to runner
       env:
-        zipball: ${{ github.event.release.zipball_url }}
         tarball: ${{ github.event.release.tarball_url }}
-        version: ${{ github.event.release.tag_name }}
       run: |
         name=$(basename ${tarball})        
         curl -L $tarball > $name
         echo "archive=${name}" >> $GITHUB_ENV
 
     - name: Run Zenodo Deploy
-      uses: ./
-      id: deploy
+      uses: rseng/zenodo-release@main
       with:
-        version: ${{ github.event.release.tag_name }}
-        zenodo_json: .zenodo.json
-        archive: ${{ env.archive }}
         token: ${{ secrets.ZENODO_TOKEN }}
+        version: ${{ github.event.release.tag_name }}
+        zenodo_json: .zenodo.json   
+        archive: ${{ env.archive }}
         doi: 10.5281/zenodo.10719406
-
-    - name: View Outputs
-      env:
-        doi: ${{ steps.deploy.outputs.doi }} 
-        conceptdoi: ${{ steps.deploy.outputs.conceptdoi }} 
-        conceptbadge: ${{ steps.deploy.outputs.conceptbadge }}
-        badge: ${{ steps.deploy.outputs.badge }} 
-        bucket: ${{ steps.deploy.outputs.bucket }} 
-        latest: ${{ steps.deploy.outputs.latest }} 
-        latest_html: ${{ steps.deploy.outputs.latest_html }} 
-        record: ${{ steps.deploy.outputs.record }} 
-        record_html: ${{ steps.deploy.outputs.record_html }} 
-      run: |
-        echo "doi ${doi}"
-        echo "conceptdoi ${conceptdoi}"
-        echo "conceptbadge ${conceptbadge}"
-        echo "badge ${badge}"
-        echo "bucket ${bucket}"
-        echo "latest ${latest}"
-        echo "latest html ${latest_html}"
-        echo "record ${record}"
-        echo "record html ${record_html}" 
