--- a/.github/workflows/zenodo.yml
+++ b/.github/workflows/zenodo.yml
@@ -14,7 +14,7 @@ jobs:
       env:
         tarball: ${{ github.event.release.tarball_url }}
       run: |
-        name=$(basename ${tarball}).tar      
+        name=$(basename ${tarball}).tar.gz      
         curl -L $tarball > $name
         echo "archive=${name}" >> $GITHUB_ENV
 
