--- a/.github/workflows/zenodo.yml
+++ b/.github/workflows/zenodo.yml
@@ -13,7 +13,7 @@ jobs:
     - name: download archive to runner
       env:
         tarball: ${{ github.event.release.tarball_url }}
-        zipball: ${{ github.event.release.tarball_url }}
+        zipball: ${{ github.event.release.zipball_url }}
       run: |
         name=$(basename ${zipball}).zip   
         curl -L $zipball > $name
