--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,4 +8,4 @@ jobs:
   after-release:
     runs-on: ubuntu-latest
     steps:
-      - run: echo "Name: ${{ github.event.release.name }} Description: ${{ github.event.release.body }}"
+      - run: echo "Description ${{ github.event.release.body }}"
